Ported to Silverlight.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,3 +6,5 @@ detailed history and prior versions (http://svn.paulstovell.com/svn/MicroModels)
 
 2010-01-15:
   - Publishing the MicroModels project.
+2010-01-21
+  - Ported to Silverlight.
